--- a/pom.xml
+++ b/pom.xml
@@ -49,22 +49,22 @@
     <parent>
         <groupId>org.jahia</groupId>
         <artifactId>jahia-parent</artifactId>
-        <version>7.1.1.0</version>
+        <version>7.1.1.1-SNAPSHOT</version>
         <relativePath>../jahia/jahia-parent/pom.xml</relativePath>
     </parent>
     
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-root</artifactId>
-  <version>7.1.1.0</version>
+  <version>7.1.1.0-SNAPSHOT</version>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
     <packaging>pom</packaging>
     <description>Jahia CE Full Package</description>
 
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_1_0</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_1_0</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_7_1_1_0</url>
+        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_1_0_RC</connection>
+        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_1_0_RC</developerConnection>
+        <url>https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_7_1_1_0_RC</url>
     </scm>
 
     <repositories>
